[gd_scene load_steps=10 format=2]

[ext_resource path="res://tools/icons/icon_back.svg" type="Texture" id=1]
[ext_resource path="res://tools/song_meta_editor/UserSongList.gd" type="Script" id=2]
[ext_resource path="res://tools/icons/icon_add.svg" type="Texture" id=3]
[ext_resource path="res://tools/icons/icon_save.svg" type="Texture" id=4]
[ext_resource path="res://tools/song_meta_editor/SongMetadataEditorControl.gd" type="Script" id=5]
[ext_resource path="res://default_theme_tools.tres" type="Theme" id=6]
[ext_resource path="res://tools/song_meta_editor/SongMetaEditor.gd" type="Script" id=7]
[ext_resource path="res://tools/icons/icon_remove.svg" type="Texture" id=8]
[ext_resource path="res://tools/icons/icon_folder.svg" type="Texture" id=9]

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 710.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 626.0
margin_bottom = 700.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
margin_right = 626.0
margin_bottom = 25.0

[node name="BackButton" type="Button" parent="HSplitContainer/VBoxContainer/HBoxContainer2"]
margin_right = 20.0
margin_bottom = 25.0
icon = ExtResource( 1 )
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 626.0
margin_bottom = 54.0
alignment = 2

[node name="FolderButton" type="Button" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 534.0
margin_right = 562.0
margin_bottom = 25.0
hint_tooltip = "Open song folder"
icon = ExtResource( 9 )

[node name="AddButton" type="Button" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 566.0
margin_right = 594.0
margin_bottom = 25.0
icon = ExtResource( 3 )

[node name="DeleteButton" type="Button" parent="HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 598.0
margin_right = 626.0
margin_bottom = 25.0
icon = ExtResource( 8 )

[node name="SongList" type="Tree" parent="HSplitContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 626.0
margin_bottom = 700.0
size_flags_vertical = 3
hide_root = true
script = ExtResource( 2 )

[node name="SongMetaEditor" type="Panel" parent="HSplitContainer"]
margin_left = 634.0
margin_right = 1260.0
margin_bottom = 700.0
size_flags_horizontal = 3
script = ExtResource( 5 )

[node name="TabContainer" type="TabContainer" parent="HSplitContainer/SongMetaEditor"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Metadata" type="ScrollContainer" parent="HSplitContainer/SongMetaEditor/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata"]
margin_right = 616.0
margin_bottom = 663.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_right = 616.0
margin_bottom = 25.0
text = "Title"

[node name="SongTitle" type="LineEdit" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 29.0
margin_right = 616.0
margin_bottom = 54.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label4" type="Label" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 58.0
margin_right = 616.0
margin_bottom = 83.0
text = "Artist"

[node name="SongArtist" type="LineEdit" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 87.0
margin_right = 616.0
margin_bottom = 112.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label2" type="Label" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 116.0
margin_right = 616.0
margin_bottom = 141.0
text = "Artist alias (leave empty if using real name)"

[node name="SongArtistAlias" type="LineEdit" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 145.0
margin_right = 616.0
margin_bottom = 170.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label7" type="Label" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 174.0
margin_right = 616.0
margin_bottom = 199.0
text = "Producers (separated by newline)"

[node name="SongProducers" type="TextEdit" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 203.0
margin_right = 616.0
margin_bottom = 387.0
size_flags_vertical = 3

[node name="Label3" type="Label" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 391.0
margin_right = 616.0
margin_bottom = 416.0
text = "Writers"

[node name="SongWriters" type="TextEdit" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 420.0
margin_right = 616.0
margin_bottom = 604.0
size_flags_vertical = 3

[node name="Label5" type="Label" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 608.0
margin_right = 616.0
margin_bottom = 633.0
text = "Chart creator"

[node name="SongCreator" type="LineEdit" parent="HSplitContainer/SongMetaEditor/TabContainer/Metadata/VBoxContainer"]
margin_top = 637.0
margin_right = 616.0
margin_bottom = 662.0

[node name="Technical Data" type="ScrollContainer" parent="HSplitContainer/SongMetaEditor/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/SongMetaEditor/TabContainer/Technical Data"]
margin_right = 616.0
margin_bottom = 663.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HSplitContainer/SongMetaEditor/TabContainer/Technical Data/VBoxContainer"]
margin_right = 616.0
margin_bottom = 31.0
text = "BPM"

[node name="BPMSpinBox" type="SpinBox" parent="HSplitContainer/SongMetaEditor/TabContainer/Technical Data/VBoxContainer"]
margin_top = 35.0
margin_right = 616.0
margin_bottom = 66.0
max_value = 2.14748e+09
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HSplitContainer/SongMetaEditor/TabContainer/Technical Data/VBoxContainer"]
margin_top = 70.0
margin_right = 616.0
margin_bottom = 101.0
text = "Audio file"

[node name="HBoxContainer2" type="HBoxContainer" parent="HSplitContainer/SongMetaEditor/TabContainer/Technical Data/VBoxContainer"]
margin_top = 105.0
margin_right = 616.0
margin_bottom = 136.0

[node name="SelectAudioFileLineEdit" type="LineEdit" parent="HSplitContainer/SongMetaEditor/TabContainer/Technical Data/VBoxContainer/HBoxContainer2"]
margin_right = 516.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="SelectAudioFileButton" type="Button" parent="HSplitContainer/SongMetaEditor/TabContainer/Technical Data/VBoxContainer/HBoxContainer2"]
margin_left = 520.0
margin_right = 616.0
margin_bottom = 31.0
text = "Select file"

[node name="Label3" type="Label" parent="HSplitContainer/SongMetaEditor/TabContainer/Technical Data/VBoxContainer"]
margin_top = 140.0
margin_right = 616.0
margin_bottom = 171.0
text = "Song preview start (in miliseconds)"

[node name="SongPreviewSpinBox" type="SpinBox" parent="HSplitContainer/SongMetaEditor/TabContainer/Technical Data/VBoxContainer"]
margin_top = 175.0
margin_right = 616.0
margin_bottom = 206.0
max_value = 2.14748e+09
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Difficulties" type="ScrollContainer" parent="HSplitContainer/SongMetaEditor/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 32.0
margin_right = -5.0
margin_bottom = -5.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/SongMetaEditor/TabContainer/Difficulties"]
margin_right = 616.0
margin_bottom = 663.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/SongMetaEditor/TabContainer/Difficulties/HBoxContainer"]
margin_right = 119.0
margin_bottom = 660.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="CheckBox" parent="HSplitContainer/SongMetaEditor/TabContainer/Difficulties/HBoxContainer/VBoxContainer"]
margin_right = 119.0
margin_bottom = 28.0
text = "Normal"

[node name="Hard" type="CheckBox" parent="HSplitContainer/SongMetaEditor/TabContainer/Difficulties/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 119.0
margin_bottom = 60.0
text = "Hard"

[node name="Extreme" type="CheckBox" parent="HSplitContainer/SongMetaEditor/TabContainer/Difficulties/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 119.0
margin_bottom = 92.0
text = "Extreme"

[node name="VBoxContainer2" type="VBoxContainer" parent="HSplitContainer/SongMetaEditor/TabContainer/Difficulties/HBoxContainer"]
margin_left = 123.0
margin_right = 223.0
margin_bottom = 660.0

[node name="Normal" type="SpinBox" parent="HSplitContainer/SongMetaEditor/TabContainer/Difficulties/HBoxContainer/VBoxContainer2"]
margin_right = 100.0
margin_bottom = 28.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Hard" type="SpinBox" parent="HSplitContainer/SongMetaEditor/TabContainer/Difficulties/HBoxContainer/VBoxContainer2"]
margin_top = 32.0
margin_right = 100.0
margin_bottom = 60.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Extreme" type="SpinBox" parent="HSplitContainer/SongMetaEditor/TabContainer/Difficulties/HBoxContainer/VBoxContainer2"]
margin_top = 64.0
margin_right = 100.0
margin_bottom = 92.0
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="SaveButton" type="Button" parent="HSplitContainer/SongMetaEditor"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_bottom = 31.0
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioFileDialog" type="FileDialog" parent="HSplitContainer/SongMetaEditor"]
margin_right = 535.0
margin_bottom = 298.0
window_title = "Abrir un Archivo"
mode = 0
access = 2
filters = PoolStringArray( "*.ogg; OGG" )
current_dir = "/home/eirexe/Project Heartbeat/Project Heartbeat"
current_path = "/home/eirexe/Project Heartbeat/Project Heartbeat/"

[node name="CreatePackageDialog" type="ConfirmationDialog" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 710.0
window_title = "Por favor, Confirma..."
dialog_text = "Create a new package"

[node name="LineEdit" type="LineEdit" parent="CreatePackageDialog"]
margin_left = 8.0
margin_top = 33.0
margin_right = 1252.0
margin_bottom = 659.0
placeholder_text = "EIREXE's super wonderful mod"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateSongDialog" type="ConfirmationDialog" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 710.0
window_title = "Por favor, Confirma..."
dialog_text = "Create a new song"

[node name="LineEdit" type="LineEdit" parent="CreateSongDialog"]
margin_left = 8.0
margin_top = 33.0
margin_right = 1252.0
margin_bottom = 659.0
placeholder_text = "EIREXE's super wonderful mod"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExportPackageFileDialog" type="FileDialog" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 710.0
window_title = "Guardar un Archivo"
access = 2
filters = PoolStringArray( "*.pck; Package File" )
current_dir = "/home/eirexe/Project Heartbeat/Project Heartbeat"
current_path = "/home/eirexe/Project Heartbeat/Project Heartbeat/"
[connection signal="pressed" from="HSplitContainer/VBoxContainer/HBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/HBoxContainer/FolderButton" to="." method="_on_FolderButton_pressed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="song_selected" from="HSplitContainer/VBoxContainer/SongList" to="." method="_on_SongList_song_selected"]
[connection signal="song_meta_saved" from="HSplitContainer/SongMetaEditor" to="HSplitContainer/VBoxContainer/SongList" method="_on_SongMetaEditor_song_meta_saved"]
[connection signal="pressed" from="HSplitContainer/SongMetaEditor/TabContainer/Technical Data/VBoxContainer/HBoxContainer2/SelectAudioFileButton" to="HSplitContainer/SongMetaEditor/AudioFileDialog" method="popup_centered_ratio" binds= [ 0.5 ]]
[connection signal="pressed" from="HSplitContainer/SongMetaEditor/SaveButton" to="HSplitContainer/SongMetaEditor" method="_on_SaveButton_pressed"]
[connection signal="file_selected" from="HSplitContainer/SongMetaEditor/AudioFileDialog" to="HSplitContainer/SongMetaEditor" method="_on_FileDialog_file_selected"]
[connection signal="confirmed" from="CreatePackageDialog" to="." method="_on_CreatePackageDialog_confirmed"]
[connection signal="confirmed" from="CreateSongDialog" to="." method="_on_CreateSongDialog_confirmed"]
[connection signal="file_selected" from="ExportPackageFileDialog" to="." method="_on_ExportPackageFileDialog_file_selected"]
